# QianYU-desktop

./: .gitignore  AGENTS.md  README.md  dev.bat  index.html  package-lock.json  package.json  server.py  stop.bat  tailwind.config.js  vite.config.ts
backend/Qwen3-TTS/: AGENTS.md
backend/faster-cuda-qwen3/: AGENTS.md  LICENSE
backend/faster-cuda-qwen3/faster_qwen3_tts/: __init__.py  cli.py  generate.py  model.py  sampling.py  streaming.py  utils.py
backend/saved_voices/: voice_001.pt  voice_002.pt  voice_registry.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AudioPlayer.tsx  CustomVoice.tsx  ServerStatus.tsx  Settings.tsx  VoiceClone.tsx  VoiceDesign.tsx  VoiceManager.tsx  WaveformVisualizer.tsx
src/components/ui/: CpuArchitecture.tsx  GlassButton.tsx  GlassCard.tsx  GlassInput.tsx  Loader.tsx  PulsatingDots.tsx  ThemeToggle.tsx  WindowControls.tsx  falling-pattern.tsx  index.ts
src/hooks/: useTTS.ts  useTheme.ts
src/services/: api.ts
